--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,14 +29,14 @@ services:
     restart: unless-stopped
     environment:
       CHOKIDAR_USEPOLLING: "true"
-    volumes:
-      - ./validator-frontend/node_modules:/usr/app/node_modules
-      - ./validator-frontend:/usr/app
+#     volumes:
+#       - ./validator-frontend/node_modules:/usr/app/node_modules
+#       - ./validator-frontend:/usr/app
 
-  proxy:
-    image: nginx:1.17
-    restart: unless-stopped
-    ports:
-      - "8080:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+#   proxy:
+#     image: nginx:1.17
+#     restart: unless-stopped
+#     ports:
+#       - "8080:80"
+#     volumes:
+#       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
