--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,11 @@
-# version: '2'
-# services:
-#     backend:
-#          image: mohamedaly89/jumia-phone-number-validator:validator-backend-image
-#          ports:
-#            - "8080:8080"
-       
-#     frontend:
-#          image: mohamedaly89/jumia-phone-number-validator:validator-frontend-image
-#          ports:
-#             - 8081:8081
-
-version: "2"
-
+version: '2'
 services:
-  backend:
-    build:
-      context: ./validator-backend
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080" 
-    restart: unless-stopped
-  frontend:
-    build:
-      context: ./validator-frontend
-      dockerfile: Dockerfile
-    ports:
-      - "8081:8081"
-    restart: unless-stopped
-    environment:
-      CHOKIDAR_USEPOLLING: "true"
-#     volumes:
-#       - ./validator-frontend/node_modules:/usr/app/node_modules
-#       - ./validator-frontend:/usr/app
-
-#   proxy:
-#     image: nginx:1.17
-#     restart: unless-stopped
-#     ports:
-#       - "8080:80"
-#     volumes:
-#       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    backend:
+         image: mohamedaly89/jumia-phone-number-validator:validator-backend-image
+         ports:
+           - "8080:8080"
+       
+    frontend:
+         image: mohamedaly89/jumia-phone-number-validator:validator-frontend-image
+         ports:
+            - 8081:8081
